Fixed title alignment

--- a/index.css
+++ b/index.css
@@ -21,14 +21,16 @@ body{
     width: 50%;
     height: 100%;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #titleTextBox{
     position: absolute;
     z-index: 10;
-    width: 80%;
-    height: 10%;
-    margin: 40% 10% 45%;
+
     padding: 2%;
 
     box-shadow: black 10px 10px;
@@ -45,6 +47,7 @@ body{
 #titleText{
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
+
     font-size: 2rem;
     color: black;
 }
@@ -241,7 +244,7 @@ body{
 }
 
 
-@media (max-device-width: 1080px) {
+@media (max-device-width: 860px) {
     #left {
         visibility: hidden;
     }
@@ -269,7 +272,7 @@ body{
     }
 
     #titleBox{
-        font-size: 5rem;
+        font-size: 4rem;
     }
 
     #login-Container{
